--- a/index.html
+++ b/index.html
@@ -8,11 +8,8 @@
     <link rel="stylesheet" href="style.css">
     <title>travelblog | racontez-nous vos plus beaux souvenirs</title>
     <link rel="icon" type="image/png" href="images/logo_travelblog.png" />
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
-        integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=RocknRoll+One&display=swap" rel="stylesheet">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 
 <body>
@@ -24,7 +21,7 @@
         </div>
     </header>
 
-    <nav id="navbar">
+    <nav>
         <div id="hamburgerAndTitle">
             <i id="hamburger" class="fas fa-bars fa-2x"></i>
             <h2 id="navbarTitle"><i class="far fa-compass"></i> travelblog.com</h2>
@@ -37,15 +34,15 @@
         </div>
     </nav>
 
-    <section id="headline">
-        <div id="bali">
-            <i class="fas  fa-3x fa-globe-americas"></i>
-            <h2>A la une</h2>
-            <h1>Bali</h1>
+    <section id="bali">
+        <div id="rectangleBali">
+            <i class="fas fa-3x fa-globe-americas"></i>
+            <h3>A la une</h3>
+            <h2>Bali</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut non voluptates, repellat, omnis adipisci
                 officiis qui exercitationem voluptate.</p>
 
-            <cite><img src="images/users/emilie.jpg">Par Emilie</cite>
+            <cite><img src="images/users/emilie.jpg" alt="photo d'Emilie">Par Emilie</cite>
             <button>Lire l'article</button>
         </div>
     </section>
@@ -60,9 +57,9 @@
                 <div><i class="fas fa-star"></i> 4.7/5</div>
             </div>
             <h3>Une semaine à Santorini</h3>
-            <cite><img src="images/users/Steven79.jpg">Steven79<span><i class="fas fa-calendar fa-2x"></i>
+            <cite><img src="images/users/Steven79.jpg" alt="photo de Steven">Steven79<span><i class="fas fa-calendar fa-2x"></i>
                     24/02/2021</span></cite>
-            <img class="topdestinationspictures" src="images/destination1.jpg">
+            <img class="topdestinationspictures" src="images/destination1.jpg" alt="Santorini">
             <button>Lire l'article</button>
         </div>
 
@@ -72,9 +69,9 @@
                 <div><i class="fas fa-star"></i> 4.6/5</div>
             </div>
             <h3>Séjour de rêve à Miami</h3>
-            <cite><img src="images/users/emma2021.jpg">Emma2021<span><i class="fas fa-calendar fa-2x"></i>
+            <cite><img src="images/users/emma2021.jpg" alt="photo d'Emma2021">Emma2021<span><i class="fas fa-calendar fa-2x"></i>
                     03/02/2021</span></cite>
-            <img class="topdestinationspictures" src="images/miami.jpg">
+            <img class="topdestinationspictures" src="images/miami.jpg" alt="Miami">
             <button>Lire l'article</button>
         </div>
 
@@ -84,9 +81,9 @@
                 <div><i class="fas fa-star"></i> 4.3/5</div>
             </div>
             <h3>L.A., here I come !</h3>
-            <cite><img src="images/users/julia.jpg">julia<span><i class="fas fa-calendar fa-2x"></i>
+            <cite><img src="images/users/julia.jpg" alt="photo de Julia">julia<span><i class="fas fa-calendar fa-2x"></i>
                     15/02/2021</span></cite>
-            <img class="topdestinationspictures" src="images/losangeles.jpg">
+            <img class="topdestinationspictures" src="images/losangeles.jpg" alt="Los Angeles">
             <button>Lire l'article</button>
         </div>
 
@@ -95,10 +92,10 @@
                 <p>#4</p>
                 <div><i class="fas fa-star"></i> 4.2/5</div>
             </div>
-            <h3>Les Madives à la folie</h3>
-            <cite><img src="images/users/johanna84.jpg">johanna84<span><i class="fas fa-calendar fa-2x"></i>
+            <h3>Les Maldives à la folie</h3>
+            <cite><img src="images/users/johanna84.jpg" alt="photo de johanna84">johanna84<span><i class="fas fa-calendar fa-2x"></i>
                     27/12/2020</span></cite>
-            <img class="topdestinationspictures" src="images/maldives.jpg">
+            <img class="topdestinationspictures" src="images/maldives.jpg" alt="Maldives">
             <button>Lire l'article</button>
         </div>
 
@@ -108,9 +105,9 @@
                 <div><i class="fas fa-star"></i> 4.2/5</div>
             </div>
             <h3>Week-end à Toronto</h3>
-            <cite><img src="images/users/nathalie.jpg">Nathalie<span><i class="fas fa-calendar fa-2x"></i>
+            <cite><img src="images/users/nathalie.jpg" alt="photo de Nathalie">Nathalie<span><i class="fas fa-calendar fa-2x"></i>
                     11/03/2021</span></cite>
-            <img class="topdestinationspictures" src="images/toronto.jpg">
+            <img class="topdestinationspictures" src="images/toronto.jpg" alt="Toronto">
             <button>Lire l'article</button>
         </div>
         <button>Classement complet</button>
@@ -119,19 +116,19 @@
     <article id="articlesIntro">
         <i class="fas fa-3x fa-clock"></i>
         <h2>Derniers articles</h2>
-        <div class="articlesIntroImages">
-            <img class="articlesIntroImage" src="images/montreal.jpg">
-            <img class="articlesIntroImage" src="images/sydney.jpg">
-            <img class="articlesIntroImage" src="images/rio.jpg">
+        <div>
+            <img class="articlesIntroImage" src="images/montreal.jpg" alt="Montréal">
+            <img class="articlesIntroImage" src="images/sydney.jpg" alt="Sydney">
+            <img class="articlesIntroImage" src="images/rio.jpg" alt="Rio">
         </div>
         <button>Tous les articles</button>
     </article>
 
     <article id="article1">
         <h2>Découverte de Montréal</h2>
-        <cite><img src="images/users/emma2021.jpg">Emma2021<span><i class="fas fa-clock fa-2x"></i>12/03/2021 -
+        <cite><img src="images/users/emma2021.jpg" alt="photo d'Emma2021">Emma2021<span><i class="fas fa-clock fa-2x"></i>12/03/2021 -
                 10h20</span></cite>
-        <img class="articleimage" src="images/montreal.jpg">
+        <img class="articleimage" src="images/montreal.jpg" alt="Montréal">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas voluptate odio recusandae molestias
             officiis debitis, minus tenetur distinctio provident adipisci nisi explicabo nulla eum hic, aliquam
             similique voluptatem quod rem!</p>
@@ -140,9 +137,9 @@
 
     <article id="article2">
         <h2>Escapade à Sydney</h2>
-        <cite><img src="images/users/Steven79.jpg">Steven79<span><i class="fas fa-clock fa-2x"></i> 11/03/2021 -
+        <cite><img src="images/users/Steven79.jpg" alt="photo de Steven79">Steven79<span><i class="fas fa-clock fa-2x"></i> 11/03/2021 -
                 14h27</span></cite>
-        <img class="articleimage" src="images/sydney.jpg">
+        <img class="articleimage" src="images/sydney.jpg" alt="Sydney">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas voluptate odio recusandae molestias
             officiis debitis, minus tenetur distinctio provident adipisci nisi explicabo nulla eum hic, aliquam
             similique voluptatem quod rem!</p>
@@ -151,9 +148,9 @@
 
     <article id="article3">
         <h2>En route pour Rio !</h2>
-        <cite><img src="images/users/julia.jpg">julia<span><i class="fas fa-clock fa-2x"></i> 11/03/2021 - 9h32</span>
+        <cite><img src="images/users/julia.jpg" alt="photo de Julia">julia<span><i class="fas fa-clock fa-2x"></i> 11/03/2021 - 9h32</span>
         </cite>
-        <img class="articleimage" src="images/rio.jpg">
+        <img class="articleimage" src="images/rio.jpg" alt="Rio">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas voluptate odio recusandae molestias
             officiis debitis, minus tenetur distinctio provident adipisci nisi explicabo nulla eum hic, aliquam
             similique voluptatem quod rem!</p>
@@ -170,19 +167,19 @@
             <div>
                 <h3>Grid Airlines</h3>
                 <a href="#">
-                    <img src="images/company1.png">
+                    <img src="images/company1.png" alt="logo de Grid Airlines">
                 </a>
             </div>
             <div>
                 <h3>World Air Company</h3>
                 <a href="#">
-                    <img src="images/company2.png">
+                    <img src="images/company2.png" alt="logo de World Air Company">
                 </a>
             </div>
             <div>
                 <h3>Sky Masters</h3>
                 <a href="#">
-                    <img src="images/company3.png">
+                    <img src="images/company3.png" alt="logo de Sky Masters">
                 </a>
             </div>
         </div>
@@ -198,30 +195,28 @@
         </ul>
     </footer>
 
-    <script type="text/javascript">
+    <script>
 
-        $(document).ready(function () {
+        window.onload = function () {
+
+            let hamburger = document.getElementById('hamburger');
+            let links = document.getElementById('navigationLinks');
 
             // au clic sur hamburger, afficher ou masquer le menu (en responsive)
-            $('#hamburger').on('click', function () {
-                if ($('#navigationLinks').css('display') == 'none') {
-                    $('#navigationLinks').css('display', 'block');
-                    $('#navigationLinks').css('display', 'grid');
-                }
-                else {
-                    $('#navigationLinks').css('display', 'none');
-                }
-            });
+            hamburger.onclick = function () {
+                links.style.display == 'none' ? (links.style.display = 'block', links.style.display = 'grid') : links.style.display = 'none';
+            }
 
             // afficher le menu quand on passe en taille desktop (même s'il est masqué)
             window.addEventListener('resize', () => {
                 let width = window.innerWidth;
-                if (width > 1080) {
-                    $('#navigationLinks').css('display', 'block');
-                    $('#navigationLinks').css('display', 'grid');
+                if (width > 992) {
+                    links.style.display = 'block';
+                    links.style.display = 'grid';
                 }
             });
-        })
+
+        };
 
     </script>
 </body>
